Fix duplicate passwordEncoder bean and update AuthController response