@@ -1,11 +1,7 @@
 package com.aadiandjava.config;
 
-import java.util.Arrays;
-
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
-import org.springframework.security.config.Customizer; // 🌟 CORRECT IMPORT
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -14,65 +10,50 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.List;
+
 @Configuration
 public class SecurityConfig {
 
-    // ==========================================
-    // 1. PASSWORD ENCRYPTION BEAN
-    // ==========================================
+    // 1. Fixes the "No qualifying bean of type PasswordEncoder" error in UserService
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    // ==========================================
-    // 2. SECURITY FILTER CHAIN (ENDPOINT RULES)
-    // ==========================================
+    // 2. Configures Security Rules and endpoints
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .cors(Customizer.withDefaults()) // Activates the CorsConfigurationSource bean below
-            .csrf(csrf -> csrf.disable())    // Disabled for REST API usage
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(csrf -> csrf.disable())
             .authorizeHttpRequests(auth -> auth
-                    // Public Authentication Endpoints
-                    .requestMatchers("/api/users/login", "/api/users/register").permitAll()
-                    // Public Product Catalog Endpoints
-                    .requestMatchers(HttpMethod.GET, "/api/products", "/api/products/**").permitAll()
-                    // Allow preflight options requests
-                    .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                    // All other requests permitted for seamless full-stack communication
-                    .anyRequest().permitAll()
-            )
-            .httpBasic(Customizer.withDefaults());
+                .requestMatchers("/api/**").permitAll()
+                .anyRequest().authenticated()
+            );
 
         return http.build();
     }
 
-    // ==========================================
-    // 3. GLOBAL CORS CONFIGURATION
-    // ==========================================
+    // 3. Configures CORS so Firebase frontend can call your Render backend endpoints
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Allow requests from your deployed Firebase frontend and local environments
-        configuration.setAllowedOrigins(Arrays.asList(
+        configuration.setAllowedOrigins(List.of(
             "https://aadi-ecommerce-store-a3a0f.web.app",
+            "https://aadi-ecommerce-store-a3a0f.firebaseapp.com",
             "http://localhost:3000",
-            "http://127.0.0.1:5500",
-            "http://localhost:8080"
+            "http://localhost:8080",
+            "http://localhost:5500"
         ));
 
-        // Allow all standard HTTP methods
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-        // Allow all headers
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-
         return source;
     }
 }
